# cxd5602pwbimu-logger

./: README.md  cxd5602pwbimu-logger.ino
.github/workflows/: ci.yml
receiver/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  uart_optimization_report.md
receiver/.github/workflows/: ci.yml
receiver/src/: lib.rs  main.rs
receiver/src/lib/: async_worker.rs  error.rs  mod.rs  parquet_writer.rs  serial.rs  types.rs
receiver/tests/: async_tests.rs  cli_tests.rs
